--- a/.github/workflows/4-code-scan-pl.yml
+++ b/.github/workflows/4-code-scan-pl.yml
@@ -33,6 +33,8 @@ jobs:
         git add *.py
         git commit -m "Convert notebooks to Python scripts" || echo "No changes to commit"
         git push origin HEAD:main
+    - name: Wait for 10 seconds
+      run: sleep 30
 
   codescan:
     name: Analyze (${{ matrix.language }})
@@ -72,6 +74,8 @@ jobs:
       uses: github/codeql-action/analyze@v3
       with:
         category: "/language:${{matrix.language}}"
+    - name: Wait for 10 seconds
+      run: sleep 30
 
   delete-converted:
     runs-on: ubuntu-latest
