--- a/.github/workflows/4-code-scan-pl.yml
+++ b/.github/workflows/4-code-scan-pl.yml
@@ -37,8 +37,8 @@ jobs:
       run: sleep 30
 
   codescan:
-    name: Analyze (${{ matrix.language }})
     runs-on: ubuntu-latest
+    needs: convert # codescan depends on convert
     permissions:
       # required for all workflows
       security-events: write
