--- a/.github/workflows/5-export-dbx-nb.yml
+++ b/.github/workflows/5-export-dbx-nb.yml
@@ -36,7 +36,9 @@ jobs:
       - name: Check for notebook changes
         id: check_changes
         run: |
-          notebooks=$(git diff --name-only HEAD HEAD~1 | grep '\.ipynb')
+          # Compare current branch against the base branch
+          base_branch="${{ github.event.pull_request.base.ref }}"
+          notebooks=$(git diff --name-only "$base_branch"...HEAD | grep '\.ipynb')
           if [ -z "$notebooks" ]; then
             echo "no_notebooks" >> $GITHUB_ENV
           else
