--- a/.github/workflows/7-move-nb.yml
+++ b/.github/workflows/7-move-nb.yml
@@ -30,8 +30,8 @@ jobs:
             # Use HEAD^ if it exists
             changed_notebooks=$(git diff --name-only HEAD^ HEAD | grep '\.ipynb$')
           else
-            # If HEAD^ doesn't exist, compare with an empty tree
-            changed_notebooks=$(git diff --name-only --diff-filter=AM 0000000000000000000000000000000000000000 HEAD | grep '\.ipynb$')
+            # If HEAD^ doesn't exist, use `git diff` with `--diff-filter` to find added files
+            changed_notebooks=$(git diff --name-only --diff-filter=A HEAD | grep '\.ipynb$')
           fi
           
           if [ -z "$changed_notebooks" ]; then
