--- a/.github/workflows/7-move-nb.yml
+++ b/.github/workflows/7-move-nb.yml
@@ -15,6 +15,10 @@ jobs:
         run: |
           pip install databricks-cli
 
+      - name: Install Requests with Specific Versions
+        run: |
+          pip install requests==2.28.1 urllib3==2.2.3 chardet==4.0.0
+
       - name: Configure Databricks CLI
         run: |
           databricks configure --token ${{ secrets.DATABRICKS_TOKEN }} --host ${{ secrets.DATABRICKS_HOST }}
