--- a/.github/workflows/7-move-nb.yml
+++ b/.github/workflows/7-move-nb.yml
@@ -15,9 +15,9 @@ jobs:
         run: |
           pip install databricks-cli
 
-      - name: Install Requests with Specific Versions
+      - name: Install Requests with Specific Versions (Looser urllib3)
         run: |
-          pip install requests==2.28.1 urllib3==2.2.3 chardet==4.0.0
+          pip install requests==2.28.1 urllib3>=1.21.1
 
       - name: Configure Databricks CLI
         run: |
