--- a/.github/workflows/6-upload-changed-nb.yml
+++ b/.github/workflows/6-upload-changed-nb.yml
@@ -10,8 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Fetch all history for all branches
 
       - name: Set up Python
         uses: actions/setup-python@v2
