--- a/.github/workflows/4-code-scan-pl.yml
+++ b/.github/workflows/4-code-scan-pl.yml
@@ -23,7 +23,7 @@ jobs:
         pip install nbconvert
     - name: Convert Jupyter Notebooks
       run: |
-        for notebook in *.ipynb; do
+        for notebook in notebooks/*.ipynb; do
             jupyter nbconvert --to python "$notebook" 
         done
     - name: Commit and Push Converted Files
