--- a/.github/workflows/8-code-scan-move-pl.yml
+++ b/.github/workflows/8-code-scan-move-pl.yml
@@ -60,6 +60,7 @@ jobs:
       with:
         languages: ${{ matrix.language }}
         build-mode: ${{ matrix.build-mode }}
+        path: notebooks
     - if: matrix.build-mode == 'manual'
       shell: bash
       run: |
