--- a/.github/workflows/8-code-scan-move-pl.yml
+++ b/.github/workflows/8-code-scan-move-pl.yml
@@ -90,6 +90,6 @@ jobs:
       run: |
         git config --local user.name "github-actions[bot]"
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
-        git rm *.py || echo "File not found, nothing to delete"
+        git rm notebooks/*.py || echo "File not found, nothing to delete"
         git commit -m "Convert notebooks to Python scripts and delete specified file" || echo "No changes to commit"
         git push origin HEAD:main
