--- a/.github/workflows/8-code-scan-move-pl.yml
+++ b/.github/workflows/8-code-scan-move-pl.yml
@@ -60,7 +60,6 @@ jobs:
       with:
         languages: ${{ matrix.language }}
         build-mode: ${{ matrix.build-mode }}
-        path: notebooks
     - if: matrix.build-mode == 'manual'
       shell: bash
       run: |
@@ -74,6 +73,7 @@ jobs:
       uses: github/codeql-action/analyze@v3
       with:
         category: "/language:${{matrix.language}}"
+        paths: notebooks # Specify the folder to analyze
 
   delete-converted:
     runs-on: ubuntu-latest
