--- a/.github/workflows/8-code-scan-move-pl.yml
+++ b/.github/workflows/8-code-scan-move-pl.yml
@@ -72,6 +72,7 @@ jobs:
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
       with:
+        paths: notebooks # Specify the folder to analyze
         category: "/language:${{matrix.language}}"
 
   delete-converted:
