--- a/.github/workflows/8-code-scan-move-pl.yml
+++ b/.github/workflows/8-code-scan-move-pl.yml
@@ -93,3 +93,30 @@ jobs:
         git rm notebooks/*.py || echo "File not found, nothing to delete"
         git commit -m "Convert notebooks to Python scripts and delete specified file" || echo "No changes to commit"
         git push origin HEAD:main
+
+  move-notebooks-databricks:
+    runs-on: ubuntu-latest
+    needs: delete-converted # move-notebooks-databricks depends on delete-converted
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.8'
+    - name: Install Databricks CLI
+      run: |
+        pip install databricks-cli
+    - name: Configure Databricks CLI
+      env:
+        DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
+        DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
+      run: |
+        databricks configure --token <<EOF
+        $DATABRICKS_HOST
+        $DATABRICKS_TOKEN
+        EOF
+    - name: Move notebooks to Databricks
+      run: |
+        for notebook in notebooks/*.ipynb; do
+          databricks workspace import "$notebook" "/Workspace/Shared/test-dbx-devops/$(basename "$notebook")" --overwrite
+        done
