--- a/.github/workflows/8-code-scan-move-pl.yml
+++ b/.github/workflows/8-code-scan-move-pl.yml
@@ -118,5 +118,5 @@ jobs:
     - name: Move notebooks to Databricks
       run: |
         for notebook in notebooks/*.ipynb; do
-          databricks workspace import "$notebook" "/Workspace/Shared/test-dbx-devops/$(basename "$notebook")" --overwrite
+          databricks workspace import --overwrite --format SOURCE --language PYTHON "$notebook" "/Workspace/Shared/test-dbx-devops/$(basename "$notebook")"
         done
