--- a/.github/workflows/8-code-scan-move-pl.yml
+++ b/.github/workflows/8-code-scan-move-pl.yml
@@ -32,6 +32,7 @@ jobs:
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git add *.py
         git commit -m "Convert notebooks to Python scripts" || echo "No changes to commit"
+        git pull origin HEAD:main
         git push origin HEAD:main
     - name: Notify success
       run: |
