--- a/.github/workflows/8-code-scan-move-pl.yml
+++ b/.github/workflows/8-code-scan-move-pl.yml
@@ -3,8 +3,12 @@ name: 8-code scan and move pipeline
 on:
   push:
     branches: [ "main" ]
+    paths:
+      - 'notebooks/**'
   pull_request:
     branches: [ "main" ]
+    paths:
+      - 'notebooks/**'
 
 jobs:
   convert:
