--- a/.github/workflows/8-code-scan-move-pl.yml
+++ b/.github/workflows/8-code-scan-move-pl.yml
@@ -32,8 +32,8 @@ jobs:
         done
     - name: Commit and Push Converted Files
       run: |
-        git config --local user.name "github-actions[bot]"
-        git config --local user.email "github-actions[bot]@users.noreply.github.com"
+        git config --global user.name "github-actions[bot]"
+        git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git add *.py
         git commit -m "Convert notebooks to Python scripts" || echo "No changes to commit"
         git pull origin HEAD:main
