--- a/.github/workflows/8-code-scan-move-pl.yml
+++ b/.github/workflows/8-code-scan-move-pl.yml
@@ -121,6 +121,6 @@ jobs:
       run: |
         for notebook in notebooks/*.ipynb; do
           # databricks workspace import --overwrite --format SOURCE --language PYTHON "$notebook" "/Workspace/Shared/test-dbx-devops/$(basename "$notebook")"
-          databricks workspace import --overwrite --format SOURCE --language PYTHON "$notebook" "/Workspace/Shared/test-dbx-devops/$(basename "$notebook" .py).dbc"
+          databricks workspace import --overwrite --format SOURCE --language PYTHON --notebook "$notebook" "/Workspace/Shared/test-dbx-devops/$(basename "$notebook")"
         done
         
