--- a/.github/workflows/8-code-scan-move-pl.yml
+++ b/.github/workflows/8-code-scan-move-pl.yml
@@ -77,28 +77,29 @@ jobs:
         checkout_path: notebooks # Specify the folder to analyze
         category: "/language:${{matrix.language}}"
 
-  delete-converted:
-    runs-on: ubuntu-latest
-    needs: codescan # delete-converted depends on codescan
-    permissions:
-      contents: write  # Allow writing to the repository contents
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.8'
-    - name: Commit and Push Delete Converted Files
-      run: |
-        git config --global user.name "github-actions[bot]"
-        git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        git rm notebooks/*.py || echo "File not found, nothing to delete"
-        git commit -m "Convert notebooks to Python scripts and delete specified file" || echo "No changes to commit"
-        git push origin HEAD:main
+  # delete-converted:
+  #   runs-on: ubuntu-latest
+  #   needs: codescan # delete-converted depends on codescan
+  #   permissions:
+  #     contents: write  # Allow writing to the repository contents
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - name: Set up Python
+  #     uses: actions/setup-python@v2
+  #     with:
+  #       python-version: '3.8'
+  #   - name: Commit and Push Delete Converted Files
+  #     run: |
+  #       git config --global user.name "github-actions[bot]"
+  #       git config --global user.email "github-actions[bot]@users.noreply.github.com"
+  #       git rm notebooks/*.py || echo "File not found, nothing to delete"
+  #       git commit -m "Convert notebooks to Python scripts and delete specified file" || echo "No changes to commit"
+  #       git push origin HEAD:main
 
   move-notebooks-databricks:
     runs-on: ubuntu-latest
-    needs: delete-converted # move-notebooks-databricks depends on delete-converted
+    needs: codescan # delete-converted depends on codescan
+    # needs: delete-converted # move-notebooks-databricks depends on delete-converted
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python
