--- a/.github/workflows/8-code-scan-move-pl.yml
+++ b/.github/workflows/8-code-scan-move-pl.yml
@@ -125,5 +125,5 @@ jobs:
         done
     - name: Move folder to Databricks
       run: |
-        databricks workspace import --overwrite --format SOURCE --language PYTHON --path "/notebooks" "/Workspace/Shared/test-dbx-devops-notebooks"
+        databricks workspace import --overwrite --format SOURCE --language PYTHON --recursive "notebooks/" "/Workspace/Shared/test-dbx-devops-notebooks"
         
