--- a/.github/workflows/8-code-scan-move-pl.yml
+++ b/.github/workflows/8-code-scan-move-pl.yml
@@ -127,7 +127,8 @@ jobs:
       run: |
         # databricks workspace import --overwrite --format SOURCE --language PYTHON --recursive "notebooks/" "/Workspace/Shared/test-dbx-devops-notebooks"
         # databricks workspace import --overwrite --format SOURCE --language PYTHON "/notebooks" "/Workspace/Shared/test-dbx-devops-notebooks"
-        databricks workspace import ./notebooks /Workspace/Shared/test-dbx-devops-notebooks --overwrite
+        databricks workspace import ./notebooks /Workspace/Shared/test-dbx-devops-notebooks --overwrite --language python
+
 
 
         
