--- a/.github/workflows/8-code-scan-move-pl.yml
+++ b/.github/workflows/8-code-scan-move-pl.yml
@@ -123,13 +123,13 @@ jobs:
         for notebook in notebooks/*.ipynb; do
           databricks workspace import --overwrite --format SOURCE --language PYTHON "$notebook" "/Workspace/Shared/test-dbx-devops/$(basename "$notebook")"
         done
-    - name: Move folder to Databricks
-      run: |
+    # - name: Move folder to Databricks
+    #   run: |
         # databricks workspace import --overwrite --format SOURCE --language PYTHON --recursive "notebooks/" "/Workspace/Shared/test-dbx-devops-notebooks"
         # databricks workspace import --overwrite --format SOURCE --language PYTHON "/notebooks" "/Workspace/Shared/test-dbx-devops-notebooks"
-        for file in ./notebooks/*.ipynb; do
-          databricks workspace import "$file" "/Workspace/Shared/test-dbx-devops/$(basename "$file" .ipynb)" --overwrite --language python
-        done
+        # for file in ./notebooks/*.ipynb; do
+        #   databricks workspace import "$file" "/Workspace/Shared/test-dbx-devops/$(basename "$file" .ipynb)" --overwrite --language python
+        # done
 
 
 
