--- a/.github/workflows/8-code-scan-move-pl.yml
+++ b/.github/workflows/8-code-scan-move-pl.yml
@@ -121,7 +121,7 @@ jobs:
     - name: Move notebooks to Databricks
       run: |
         for notebook in notebooks/*.ipynb; do
-          databricks workspace import --overwrite --format SOURCE --language PYTHON "$notebook" "/Workspace/Shared/test-dbx-devops/$(basename "$notebook")"
+          databricks workspace import --overwrite --format DBC --language PYTHON "$notebook" "/Workspace/Shared/test-dbx-devops/$(basename "$notebook")"
         done
     # - name: Move folder to Databricks
     #   run: |
