--- a/.github/workflows/8-code-scan-move-pl.yml
+++ b/.github/workflows/8-code-scan-move-pl.yml
@@ -120,8 +120,8 @@ jobs:
         EOF
     - name: Move notebooks to Databricks
       run: |
-        for notebook in notebooks/*.ipynb; do
-          databricks workspace import --overwrite --format DBC --language PYTHON "$notebook" "/Workspace/Shared/test-dbx-devops/$(basename "$notebook")"
+        for notebook in notebooks/*.py; do
+          databricks workspace import --overwrite --format SOURCE --language PYTHON "$notebook" "/Workspace/Shared/test-dbx-devops/$(basename "$notebook")"
         done
     # - name: Move folder to Databricks
     #   run: |
@@ -130,7 +130,7 @@ jobs:
         # for file in ./notebooks/*.ipynb; do
         #   databricks workspace import "$file" "/Workspace/Shared/test-dbx-devops/$(basename "$file" .ipynb)" --overwrite --language python
         # done
-
+        # - name: Move folder to Databricks
 
 
 
