--- a/.github/workflows/9-test-move-nb-dbx.yml
+++ b/.github/workflows/9-test-move-nb-dbx.yml
@@ -34,7 +34,7 @@ jobs:
         done
     - name: Move converted notebooks to Databricks
       run: |
-        databricks workspace upload --path ./notebooks --destination /Workspace/Shared/test-dbx-devops/
+        databricks workspace import-dir --path ./notebooks --destination /Workspace/Shared/test-dbx-devops/
 
 
 
