--- a/.github/workflows/9-test-move-nb-dbx.yml
+++ b/.github/workflows/9-test-move-nb-dbx.yml
@@ -17,7 +17,7 @@ jobs:
         python-version: '3.8'
     - name: Install Databricks CLI
       run: |
-        pip install --upgrade databricks-cli
+        pip install databricks-cli==0.9.1
     - name: Configure Databricks CLI
       env:
         DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
