--- a/.github/workflows/9-test-move-nb-dbx.yml
+++ b/.github/workflows/9-test-move-nb-dbx.yml
@@ -27,7 +27,7 @@ jobs:
         $DATABRICKS_HOST
         $DATABRICKS_TOKEN
         EOF
-    - name: Move notebooks to Databricks
+    - name: Move notebooks to Databricks Workspace
       run: |
         for notebook in notebooks/*.ipynb; do
           databricks workspace import --overwrite --format JUPYTER --language PYTHON "$notebook" "/Workspace/Shared/test-dbx-devops/$(basename "$notebook")"
