--- a/.github/workflows/9-test-move-nb-dbx.yml
+++ b/.github/workflows/9-test-move-nb-dbx.yml
@@ -35,7 +35,7 @@ jobs:
 
         for notebook in ./notebooks/*.ipynb; do
           filename=$(basename "$notebook" .ipynb)
-          databricks workspace import --overwrite --format SOURCE --language PYTHON "$notebook" "/Workspace/Shared/test-dbx-devops/$filename"
+          databricks workspace import --overwrite --format JUPYTER --language PYTHON "$notebook" "/Workspace/Shared/test-dbx-devops/$filename"
         done
 
     # - name: Move converted notebooks to Databricks
